<resources>
    <string name="app_name">MobiUni</string>
    <string name="Login_Register_button">Registration</string>
    <string name="Login_Login_button">Log In</string>
    <string name="Back_button">Back</string>
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="Average">Average:</string>
    <string name="LogoutButton">Logout</string>
    <string name="Profile">Profile</string>
    <string name="MainMenu">Main Menu</string>
    <string name="Categories">Categories</string>
    <string name="Message_LogoutSuccesfull">Logout Succeeded</string>
    <string name="Profile_YourLessons">Here are the lessons you made:</string>


</resources>
