<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Username"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/Login_UserName_text"
        />


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Password"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/Login_Password_text"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/Login_Register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Login_Register_button"/>
        <Button
            android:text="@string/Login_Login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/Login_Login_button"/>

    </LinearLayout>

</LinearLayout>