<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".View.RegistrationActivity">


    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Username"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/Registration_UserName_text"
        />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Password"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/Registration_Password_text"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/Login_Register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/Registration_Registrate_button"/>

    </LinearLayout>

</LinearLayout>